fix alignment of buttons in edit mode

--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -8,6 +8,7 @@
   line-height: 30px;
   display: flex;
   justify-content: left;
+  align-items: center;
 
   .app-item-due-date {
     background: antiquewhite;
